# MarketAnalyzer

./: .env.example  README.md  app.py  app_routes.py  main.py  market_analyzer.sql  models.py  pyproject.toml  replit.nix  requirements_list.txt  routes.py  run.sh  svg_to_png.py
attached_assets/: Pasted-Error-psycopg2-errors-UndefinedColumn-column-timeframe-str-of-relation-candles-does-not-exist-1743519460907.txt
docs/: database_config.md
init/: db_init.py
instance/: forex_analyzer.db
services/: candle_service.py  fvg_service.py  price_action_service.py  trade_service.py
static/css/: styles.css
static/js/: app.js  chart.js
templates/: base.html  index.html
